# rules_electron

./: .gitignore  README.md  WORKSPACE
example/: BUILD.bazel
tools/: BUILD.bazel  electron.bzl  run.sh.tpl
